# mindforge

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.dev  GOVERNANCE.md  IMPLEMENTATION_PLAN.md  Makefile  PRIVACY.md  README.md  SECURITY.md  SPEC.md.bak  compose.yaml  create-issues.sh  erl_crash.dump  playwright.config.ts
backend/: __init__.py  alembic.ini  exceptions.py  main.py  pyproject.toml
backend/agents/: __init__.py  cmo.py  coo.py  engineer.py  json_utils.py  researcher.py  routing.py  supervisor.py
backend/api/: __init__.py  deps.py  websocket.py
backend/api/oauth/: __init__.py  composio_provider.py  provider.py
backend/api/routes/: __init__.py  integrations.py  memories.py  oauth.py  onboarding.py  preferences.py  skills.py  tasks.py  usage.py  webhooks.py
backend/db/: __init__.py  migrate.py  models.py  schema.sql
backend/llm/: __init__.py  cache.py  cost_tracker.py  inference.py  prompts.py  router.py
backend/memory/: __init__.py  embeddings.py  episodic.py  sanitizer.py  semantic.py  store.py  style.py
backend/observability/: __init__.py  metrics.py
backend/scheduler/: __init__.py  temporal_app.py
backend/scheduler/workflows/: __init__.py  email_monitor.py  oauth_refresh.py
backend/skills/: __init__.py  executor.py  models.py  registry.py  trigger.py  validator.py
backend/skills/skills/: calendar-conflict.yaml  distill-your-own-skill.yaml  subscription-refund.yaml
backend/tests/: __init__.py  conftest.py  repro_issue_105.py
backend/tests/fixtures/: __init__.py
backend/tests/integration/: __init__.py  test_budget.py  test_clarification.py  test_email_fetch_oauth_path.py  test_email_send.py  test_github.py  test_integrations_api.py  test_linear.py  test_llm_sse_stream.py  test_main_lifespan.py  test_memory_delete.py  test_metrics_endpoint.py  test_oauth_refresh_worker.py  test_oauth_routes.py  test_onboarding_completion.py  test_phase1_exit_criteria.py  test_placeholder.py  test_preferences.py  test_rate_limiter.py  test_skill_approval_resume.py  test_skill_executor_llm.py  test_skill_trigger.py  test_skill_wiring.py  test_skills_api.py  test_skills_validate_endpoint.py  test_soak_test_harness.py  test_stripe_refund.py  test_stripe_webhook.py  test_style_learning.py  test_temporal.py  test_websocket.py
backend/tests/unit/: __init__.py  (+29 more)
backend/tools/: __init__.py  base.py  email_fetch.py  email_send.py  github.py  rate_limiter.py  registry.py  stripe.py
(+97 files in other folders)
